getting_started/test_files/syntax_errors/NoMainMethod.cpm
class NoMainMethod {
  display(): void {
    print(1)
  }
}
